--- a/Every-Taste/src/app/app.component.html
+++ b/Every-Taste/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1 class="container"> Hello me </h1>
-<hr>
+<header>
+  <app-header></app-header>
+</header>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
+    </div>
+  </div>
+</div>
