--- a/Every-Taste/src/app/app.component.html
+++ b/Every-Taste/src/app/app.component.html
@@ -1,11 +1,12 @@
-<header>
-  <app-header></app-header>
-</header>
-<div class="container">
+
+<div class="container-fluid">
+  <header>
+    <app-header (featureSelected)="onNavigate($event)"></app-header>
+  </header>
   <div class="row">
     <div class="col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
+      <app-shopping-list  *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
     </div>
   </div>
 </div>
