--- a/Every-Taste/src/app/header/header.component.html
+++ b/Every-Taste/src/app/header/header.component.html
@@ -21,10 +21,10 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Recipes</a>
+              <a class="nav-link active" aria-current="page" href="#" (click)="onSelect('recipe')">Recipes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Shopping list</a>
+              <a class="nav-link active" aria-current="page" href="#" (click)="onSelect('shopping-list')">Shopping list</a>
             </li>
           </ul>
 
