--- a/Every-Taste/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Every-Taste/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,35 @@
-<p>recipe-detail works!</p>
+<div class="row">
+  <div class="col-xs-12" style="margin-top: 59px">
+    <img [src]="recipe.imagePath" [alt]="recipe.name" class="img-fluid" style="max-height: 300px;">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>{{recipe.name}}</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+        Manage recipe
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">To shopping list</a></li>
+        <li><a href="#">Edit recipe</a></li>
+        <li><a href="#">Delete recipe</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    {{recipe.description}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Ingredients
+  </div>
+</div>
+
