--- a/Every-Taste/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/Every-Taste/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,9 @@
-<p>recipe-item works!</p>
+<a href="#" class="list-group-item clearfix" (click)="onSelect()" >
+  <div class="float-start" >
+    <h4 class="list-group-item-info">{{recipe.name}}</h4>
+    <p class="list-group-item-info">{{recipe.description}}</p>
+  </div>
+  <span class="float-end">
+        <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-fluid" style="max-height: 100px;">
+      </span>
+</a>
