--- a/Every-Taste/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/Every-Taste/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,21 +1,15 @@
 
-<div class="row" style="margin-top: 10px">
-  <div class="col-xs-12">
-    <button class="btn btn-success" >New Recipe</button>
+  <div class="row" style="margin-top: 10px">
+    <div class="col-xs-12">
+      <button class="btn btn-success" >New Recipe</button>
+    </div>
   </div>
-</div>
-<div class="row" style="margin-top: 10px">
-  <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix">
-      <div class="pull-left" >
-        <h4 class="list-group-item-info">Recipe name</h4>
-        <p class="list-group-item-info">Description</p>
-      </div>
-      <span class="pull-right">
-        <img src="" alt="" class="img-fluid" style="max-height: 50px;">
-      </span>
-    </a>
-    <app-recipe-item></app-recipe-item>
+  <div class="row" style="margin-top: 10px">
+    <div class="col-xs-12">
+      <app-recipe-item *ngFor="let recipeEl of recipes"
+                       [recipe]="recipeEl" (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
+    </div>
   </div>
-</div>
+
+
 
