--- a/Every-Taste/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/Every-Taste/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,24 @@
-<p>shopping-edit works!</p>
+<div class="row" >
+  <div class="col-xs-12">
+    <br>
+    <form >
+      <div class="row" >
+        <div class="col-sm-5 form-group" >
+          <label for="name">Name</label>
+          <input type="text" id="name" class="form-control" #nameInput>
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="amount">Amount</label>
+          <input type="number" id="amount" class="form-control" #amountInput>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 10px">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="button" (click)="onAddItem()" style="margin-right: 5px">Add</button>
+          <button class="btn btn-danger" type="button" style="margin-right: 5px">Delete</button>
+          <button class="btn btn-primary" type="button" style="margin-right: 5px">Clear</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
