--- a/Every-Taste/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Every-Taste/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
         Manage recipe
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="#">To shopping list</a></li>
+        <li><a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer">To shopping list</a></li>
         <li><a class="dropdown-item"  href="#">Edit recipe</a></li>
         <li><a class="dropdown-item"  href="#">Delete recipe</a></li>
       </ul>
@@ -30,7 +30,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+          {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
 
