--- a/Every-Taste/src/app/app.component.html
+++ b/Every-Taste/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
   <header>
-    <app-header (featureSelected)="onNavigate($event)"></app-header>
+    <app-header></app-header>
   </header>
   <div class="row">
     <div class="col-md-12">
