--- a/Every-Taste/src/app/header/header.component.html
+++ b/Every-Taste/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-info" >
+<nav class="navbar navbar-expand-lg navbar-light bg-danger" >
     <div class="container-fluid">
-        <a href="#" class="navbar-brand">Every Taste</a>
+        <a style="cursor: pointer" class="navbar-brand">Every Taste</a>
 
       <!-------------------------------------------------------------------------------------->
 
@@ -18,13 +18,13 @@
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page"  style="cursor: pointer">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" routerLink="/recipes">Recipes</a>
+            <li class="nav-item" >
+              <a class="nav-link active" aria-current="page" routerLinkActive="active" routerLink="/recipes">Recipes</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" routerLink="/shopping-list">Shopping list</a>
+            <li class="nav-item" >
+              <a class="nav-link active" aria-current="page" routerLinkActive="active" routerLink="/shopping-list">Shopping list</a>
             </li>
           </ul>
 
@@ -37,10 +37,10 @@
                  data-bs-toggle="dropdown" aria-expanded="false">Manage</a>
 
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer">Save data</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer">Fetch data</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" style="cursor: pointer">Something else here</a></li>
               </ul>
             </li>
           </ul>
@@ -49,7 +49,7 @@
 
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-light" type="button">Search</button>
           </form>
         </div>
       </div>
