--- a/Every-Taste/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/Every-Taste/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,5 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelect()" >
+
+<a style="cursor: pointer" class="list-group-item clearfix" [routerLink]="[index]" >
   <div class="float-start" >
     <h4 class="list-group-item-info">{{recipe.name}}</h4>
     <p class="list-group-item-info">{{recipe.description}}</p>
