--- a/Every-Taste/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Every-Taste/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <li><a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor: pointer">To shopping list</a></li>
-        <li><a class="dropdown-item" style="cursor: pointer" >Edit recipe</a></li>
+        <li><a class="dropdown-item" style="cursor: pointer" (click)="onEditRecipe()" >Edit recipe</a></li>
         <li><a class="dropdown-item" style="cursor: pointer" >Delete recipe</a></li>
       </ul>
     </div>
