--- a/Every-Taste/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/Every-Taste/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 
-<a style="cursor: pointer" class="list-group-item clearfix" [routerLink]="[index]" >
+<a style="cursor: pointer" class="list-group-item clearfix " [routerLink]="[index]" routerLinkActive="active">
   <div class="float-start" >
     <h4 class="list-group-item-info">{{recipe.name}}</h4>
     <p class="list-group-item-info">{{recipe.description}}</p>
