--- a/Every-Taste/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/Every-Taste/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,7 +1,7 @@
 
   <div class="row" style="margin-top: 10px">
     <div class="col-xs-12">
-      <button class="btn btn-success" >New Recipe</button>
+      <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
   </div>
   <div class="row" style="margin-top: 10px">
